Updated schedule section

--- a/css/style.css
+++ b/css/style.css
@@ -123,7 +123,7 @@ left: 0;
 }
 
 .timeline-milestone {
-  border-left: 4px solid #F73E36;
+  border-left: 4px solid #FF9800;
   margin: 0 0 0 20px;
   padding: 0 0 5px 40px;
   position: relative;
@@ -162,30 +162,30 @@ height:0px
   font-size: 14px;
 }
 .one:after {
-content: "01 Jan 2018";
+content: "01 Jun 2018";
   position: absolute;
-  left: -90px;
+  left: -100px;
   top: -3px;
   font-size: 14px;  
 }
 .two:after {
-content: "10 Jan 2018";
+content: "15 Jun 2018";
   position: absolute;
-  left: -90px;
+  left: -100px;
   top: -3px;
   font-size: 14px;  
 }
 .three:after {
-content: "10 Feb 2018";
+content: "15 Jul 2018";
   position: absolute;
-  left: -90px;
+  left: -100px;
   top: -3px;
   font-size: 14px;  
 }
 .four:after {
-content: "13 Feb 2018";
+content: "16 Jul 2018";
   position: absolute;
-  left: -90px;
+  left: -100px;
   top: -3px;
   font-size: 14px;  
 }
@@ -194,7 +194,7 @@ content: ""
 }
 
 .timeline-milestone.is-completed:before, .timeline-milestone.is-current:before {
-background-color: #F73E36;
+background-color: #FF9800;
 }
 
 .timeline-action {
