--- a/css/style.css
+++ b/css/style.css
@@ -501,3 +501,9 @@ nav.scroll-up ul li:hover{
 .footer-logo{
   height:150px;
 }
+
+.footer-copyright{
+  background: #222;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #222, #444);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #222, #444); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
